--- a/src/components/Weather/Weather.css
+++ b/src/components/Weather/Weather.css
@@ -8,11 +8,77 @@ p{
 	    margin: 0 0 10px;
 }
 
-.card-holder .md-card {
-  width: 50em;
+md-input-container .inputCity{
+	width: 100px
+}
+
+.weatherNowContainer{
+	margin: 0px 0px 0px 100px;
 }
 
 
+.weatherNowTemp{
+	padding-top: 10px;; width: 200px; text-align: left;
+}
+
+.weatherNowDesc{
+	text-align: left;
+}
+
+.weatherNowTableContainer{
+	margin: 0px 0px 0px 100px;
+}
+
+.weatherNowTable{
+	border: solid 1px #e0e0e0;
+}
+
+.weatherNowTableCell{
+	border-right: solid 1px #e0e0e0;
+}
+
+.forecastTitle{
+	height: 10px
+}
+
+.tableForecastContainer{
+	width: 800px
+}
+
+.forecastTable{
+	width: 600px; border: solid 1px #e0e0e0;
+}
+
+.forecastTableCellRight{
+	width: 250px
+}
+
+.forecastTableCellDate{
+	width: 100px;float:left;padding-top: 15px; font-size: 16px
+}
+
+.forecastTableCellLeft{
+	padding: 8px;
+                                        line-height: 1.42857143;
+                                        vertical-align: top;
+                                        border-top: 1px solid #ddd;
+}
+
+.forecastText{
+	text-align: left
+}
+
+.forecastImg{
+	float: left
+}
+
+.labelMax{
+	background-color: #f0ad4e;
+}
+
+.labelMin{
+	background-color: #999;
+}
 
 .label{
 	display: inline;
@@ -26,16 +92,4 @@ p{
     vertical-align: baseline;
     border-radius: .25em;
 }
-
-/*@media screen and (max-width: 1245px) and (min-width: 320px) {
-    .forecast {
-        margin-top: 300px;
-    }
-
-    .card-content{
-    	height: 2000px
-    }
-    
-}*/
-
 	
