--- a/src/components/Weather/Weather.html
+++ b/src/components/Weather/Weather.html
@@ -12,7 +12,7 @@
             <label>Select your city</label>
             <md-input class="inputCity" v-model="city"></md-input>
           </md-input-container>
-         
+
         </md-layout>
         <md-layout md-align="center" md-flex-xsmall="100" md-flex-medium="20" md-flex-large="20">
           <md-button class="md-raised md-primary" @click.native="search">Search</md-button>
@@ -24,7 +24,8 @@
             <h1>Weather in {{weather.data.city.name}}, {{weather.data.city.country}}</h1>
             <div>
                <img :src="'http://openweathermap.org/img/w/' + weather.data.list['0'].weather['0'].icon + '.png'" class="forecastImg">
-               <h1 class="weatherNowTemp">{{weather.data.list[0].main.temp}} ° C</h1>
+               <h1 class="weatherNowTemp"
+               v-bind:class="{ active: isActive, 'text-danger': hasError }">{{weather.data.list[0].main.temp}} ° C</h1>
             </div>
             <div>
                <h2 class="weatherNowDesc">{{weather.data.list["0"].weather["0"].description}}</h2>
@@ -58,7 +59,7 @@
           <div >
             <h2 class="forecastTitle">5 day weather forecast</h2>
           </div>
-          
+
           <div class="tableForecastContainer">
             <md-table class="forecastTable">
               <md-table-body>
@@ -75,9 +76,9 @@
                       <span  class="label labelMin">{{weather.data.list[2].main.temp_min}} °C</span>
                       <i>{{weather.data.list["5"].weather["0"].description}}</i>
                       <p>
-                        {{weather.data.list["5"].wind.speed}} m/s 
+                        {{weather.data.list["5"].wind.speed}} m/s
                         <br>
-                        Clouds {{weather.data.list["5"].clouds.all}}%, {{weather.data.list["5"].main.pressure}} hpa  
+                        Clouds {{weather.data.list["5"].clouds.all}}%, {{weather.data.list["5"].main.pressure}} hpa
                       </p>
                     </div>
                   </md-table-cell>
@@ -95,9 +96,9 @@
                       <span  class="label labelMin">{{weather.data.list[10].main.temp_min}} °C</span>
                       <i>{{weather.data.list["13"].weather["0"].description}}</i>
                       <p>
-                        {{weather.data.list["13"].wind.speed}} m/s 
+                        {{weather.data.list["13"].wind.speed}} m/s
                         <br>
-                        Clouds {{weather.data.list["13"].clouds.all}}%, {{weather.data.list["13"].main.pressure}} hpa  
+                        Clouds {{weather.data.list["13"].clouds.all}}%, {{weather.data.list["13"].main.pressure}} hpa
                       </p>
                     </div>
                   </md-table-cell>
@@ -115,9 +116,9 @@
                       <span  class="label labelMin">{{weather.data.list[18].main.temp_min}} °C</span>
                       <i>{{weather.data.list["21"].weather["0"].description}}</i>
                       <p>
-                        {{weather.data.list["21"].wind.speed}} m/s 
+                        {{weather.data.list["21"].wind.speed}} m/s
                         <br>
-                        Clouds {{weather.data.list["21"].clouds.all}}%, {{weather.data.list["21"].main.pressure}} hpa  
+                        Clouds {{weather.data.list["21"].clouds.all}}%, {{weather.data.list["21"].main.pressure}} hpa
                       </p>
                     </div>
                   </md-table-cell>
@@ -135,9 +136,9 @@
                       <span  class="label labelMin">{{weather.data.list[26].main.temp_min}} °C</span>
                       <i>{{weather.data.list["29"].weather["0"].description}}</i>
                       <p>
-                        {{weather.data.list["29"].wind.speed}} m/s 
+                        {{weather.data.list["29"].wind.speed}} m/s
                         <br>
-                        Clouds {{weather.data.list["29"].clouds.all}}%, {{weather.data.list["29"].main.pressure}} hpa  
+                        Clouds {{weather.data.list["29"].clouds.all}}%, {{weather.data.list["29"].main.pressure}} hpa
                       </p>
                     </div>
                   </md-table-cell>
@@ -155,9 +156,9 @@
                       <span  class="label labelMin" >{{weather.data.list[33].main.temp_min}} °C</span>
                       <i>{{weather.data.list["37"].weather["0"].description}}</i>
                       <p>
-                        {{weather.data.list["37"].wind.speed}} m/s 
+                        {{weather.data.list["37"].wind.speed}} m/s
                         <br>
-                        Clouds {{weather.data.list["37"].clouds.all}}%, {{weather.data.list["37"].main.pressure}} hpa  
+                        Clouds {{weather.data.list["37"].clouds.all}}%, {{weather.data.list["37"].main.pressure}} hpa
                       </p>
                     </div>
                   </md-table-cell>
@@ -168,7 +169,7 @@
         </md-layout>
       </md-layout>
     </md-card-content>
-  </md-card>    
+  </md-card>
 </div>
 
 
