--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,5 +3,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #2c3e50;
-  margin-top: 60px;
+}
+
+body.md-theme-default{
+  background-color: #d2d2d2!important;
 }
